src/com/revbingo/spiff/parser/gen/SpiffTreeParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SpiffTreeParser.java */
/******************************************************************************* * This file is part of SPIFF. *  * SPIFF is free software: you can redistribute it and/or modify * it under the terms of the GNU General Public License as published by * the Free Software Foundation, either version 3 of the License, or * (at your option) any later version. *  * SPIFF is distributed in the hope that it will be useful, * but WITHOUT ANY WARRANTY; without even the implied warranty of * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the * GNU General Public License for more details. *  * You should have received a copy of the GNU General Public License * along with SPIFF.  If not, see <http://www.gnu.org/licenses/>. ******************************************************************************/
package com.revbingo.spiff.parser.gen;
import com.revbingo.spiff.AdfFormatException;
import com.revbingo.spiff.instructions.*;
import com.revbingo.spiff.datatypes.*;
import com.revbingo.spiff.evaluator.Evaluator;
import com.revbingo.spiff.parser.InstructionParser;
import java.util.*;
import java.nio.ByteOrder;
import java.nio.charset.Charset;

public class SpiffTreeParser/*@bgen(jjtree)*/implements SpiffTreeParserTreeConstants, SpiffTreeParserConstants {/*@bgen(jjtree)*/
  protected JJTSpiffTreeParserState jjtree = new JJTSpiffTreeParserState();

  final public ASTadf adf() throws ParseException {
                /*@bgen(jjtree) adf */
  ASTadf jjtn000 = new ASTadf(JJTADF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      datatypeDefs();
      list();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(EOL);
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void datatypeDefs() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INS_DATATYPE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
           ASTdatatypeDef jjtn001 = new ASTdatatypeDef(JJTDATATYPEDEF);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
           jjtn001.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(INS_DATATYPE);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(CLASS);
        jj_consume_token(EOL);
      } finally {
           if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
             jjtn001.jjtSetLastToken(getToken(0));
           }
      }
    }
  }

  final public void list() throws ParseException {
 /*@bgen(jjtree) list */
  ASTlist jjtn000 = new ASTlist(JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TY_STRING:
        case TY_INT:
        case TY_LONG:
        case TY_BYTE:
        case TY_SHORT:
        case TY_DOUBLE:
        case TY_FLOAT:
        case TY_UBYTE:
        case TY_USHORT:
        case TY_UINT:
        case TY_ULONG:
        case TY_BITS:
        case TY_BYTES:
        case EOL:
        case INS_JUMP:
        case INS_SETORDER:
        case INS_REPEAT:
        case INS_GROUP:
        case INS_SKIP:
        case INS_IF:
        case INS_SET:
        case INS_MARK:
        case INS_SETENCODING:
        case INS_DEFINE:
        case INS_INCLUDE:
        case IDENTIFIER:
        case COMMENT:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TY_STRING:
        case TY_INT:
        case TY_LONG:
        case TY_BYTE:
        case TY_SHORT:
        case TY_DOUBLE:
        case TY_FLOAT:
        case TY_UBYTE:
        case TY_USHORT:
        case TY_UINT:
        case TY_ULONG:
        case TY_BITS:
        case TY_BYTES:
        case INS_JUMP:
        case INS_SETORDER:
        case INS_REPEAT:
        case INS_GROUP:
        case INS_SKIP:
        case INS_IF:
        case INS_SET:
        case INS_MARK:
        case INS_SETENCODING:
        case INS_DEFINE:
        case INS_INCLUDE:
        case IDENTIFIER:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TY_STRING:
          case TY_INT:
          case TY_LONG:
          case TY_BYTE:
          case TY_SHORT:
          case TY_DOUBLE:
          case TY_FLOAT:
          case TY_UBYTE:
          case TY_USHORT:
          case TY_UINT:
          case TY_ULONG:
          case TY_BITS:
          case TY_BYTES:
          case IDENTIFIER:
            datatype();
            break;
          case INS_JUMP:
          case INS_SETORDER:
          case INS_REPEAT:
          case INS_GROUP:
          case INS_SKIP:
          case INS_IF:
          case INS_SET:
          case INS_MARK:
          case INS_SETENCODING:
          case INS_DEFINE:
          case INS_INCLUDE:
            instruction();
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT:
          jj_consume_token(COMMENT);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        jj_consume_token(EOL);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void datatype() throws ParseException {
    if (jj_2_1(8)) {
      string();
    } else if (jj_2_2(2)) {
      fixedNumber();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TY_BITS:
        bits();
        break;
      case TY_BYTES:
        bytes();
        break;
      case IDENTIFIER:
        userDefinedType();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void bits() throws ParseException {
               /*@bgen(jjtree) bits */
  ASTbits jjtn000 = new ASTbits(JJTBITS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(TY_BITS);
      jj_consume_token(OPEN_PAR);
      expression();
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(IDENTIFIER);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

  final public void bytes() throws ParseException {
                /*@bgen(jjtree) bytes */
  ASTbytes jjtn000 = new ASTbytes(JJTBYTES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(TY_BYTES);
      jj_consume_token(OPEN_PAR);
      expression();
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(IDENTIFIER);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

  final public void userDefinedType() throws ParseException {
                          /*@bgen(jjtree) userDefinedType */
  ASTuserDefinedType jjtn000 = new ASTuserDefinedType(JJTUSERDEFINEDTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(IDENTIFIER);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

  final public void fixedNumber() throws ParseException {
 /*@bgen(jjtree) fixedNumber */
        ASTfixedNumber jjtn000 = new ASTfixedNumber(JJTFIXEDNUMBER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token t = null;
    try {
      numberType();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPEN_PAR:
        jj_consume_token(OPEN_PAR);
        expression();
        jj_consume_token(CLOSE_PAR);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(IDENTIFIER);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

  final public void numberType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TY_DOUBLE:
      jj_consume_token(TY_DOUBLE);
      break;
    case TY_INT:
      jj_consume_token(TY_INT);
      break;
    case TY_BYTE:
      jj_consume_token(TY_BYTE);
      break;
    case TY_FLOAT:
      jj_consume_token(TY_FLOAT);
      break;
    case TY_SHORT:
      jj_consume_token(TY_SHORT);
      break;
    case TY_LONG:
      jj_consume_token(TY_LONG);
      break;
    case TY_UBYTE:
      jj_consume_token(TY_UBYTE);
      break;
    case TY_USHORT:
      jj_consume_token(TY_USHORT);
      break;
    case TY_ULONG:
      jj_consume_token(TY_ULONG);
      break;
    case TY_UINT:
      jj_consume_token(TY_UINT);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void string() throws ParseException {
    if (jj_2_3(3)) {
      literalString();
    } else if (jj_2_4(3)) {
      fixedString();
    } else if (jj_2_5(3)) {
      terminatedString();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void fixedString() throws ParseException {
                              /*@bgen(jjtree) string */
  ASTstring jjtn000 = new ASTstring(JJTSTRING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
    jjtn000.type = ASTstring.StringType.FIXED;
      jj_consume_token(TY_STRING);
      jj_consume_token(OPEN_PAR);
      expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        jj_consume_token(ENCODING);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(IDENTIFIER);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void literalString() throws ParseException {
 /*@bgen(jjtree) string */
   ASTstring jjtn000 = new ASTstring(JJTSTRING);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);
   jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
    jjtn000.type = ASTstring.StringType.LITERAL;
      jj_consume_token(TY_STRING);
      jj_consume_token(OPEN_PAR);
      jj_consume_token(QUOTE);
      t = jj_consume_token(IDENTIFIER);
                                   jjtn000.literal = t.image;
      jj_consume_token(QUOTE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        jj_consume_token(ENCODING);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(IDENTIFIER);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void terminatedString() throws ParseException {
                                   /*@bgen(jjtree) string */
  ASTstring jjtn000 = new ASTstring(JJTSTRING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
    jjtn000.type = ASTstring.StringType.TERMINATED;
      jj_consume_token(TY_STRING);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPEN_PAR:
        jj_consume_token(OPEN_PAR);
        jj_consume_token(ENCODING);
        jj_consume_token(CLOSE_PAR);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(IDENTIFIER);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void instruction() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INS_JUMP:
      jumpInstruction();
      break;
    case INS_SETORDER:
      setOrderInstruction();
      break;
    case INS_REPEAT:
      repeatInstruction();
      break;
    case INS_GROUP:
      groupInstruction();
      break;
    case INS_SKIP:
      skipInstruction();
      break;
    case INS_IF:
      ifElseBlock();
      break;
    case INS_SET:
      setInstruction();
      break;
    case INS_MARK:
      markInstruction();
      break;
    case INS_SETENCODING:
      setEncodingInstruction();
      break;
    case INS_DEFINE:
      defineInstruction();
      break;
    case INS_INCLUDE:
      includeInstruction();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void includeInstruction() throws ParseException {
                             /*@bgen(jjtree) includeInstruction */
  ASTincludeInstruction jjtn000 = new ASTincludeInstruction(JJTINCLUDEINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(INS_INCLUDE);
      jj_consume_token(IDENTIFIER);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void defineInstruction() throws ParseException {
                            /*@bgen(jjtree) defineInstruction */
  ASTdefineInstruction jjtn000 = new ASTdefineInstruction(JJTDEFINEINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(INS_DEFINE);
      jj_consume_token(OPEN_PAR);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(OPEN_BRACE);
      list();
      jj_consume_token(CLOSE_BRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void setEncodingInstruction() throws ParseException {
                                 /*@bgen(jjtree) setEncodingInstruction */
  ASTsetEncodingInstruction jjtn000 = new ASTsetEncodingInstruction(JJTSETENCODINGINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(INS_SETENCODING);
      jj_consume_token(ENCODING);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void setInstruction() throws ParseException {
                         /*@bgen(jjtree) setInstruction */
  ASTsetInstruction jjtn000 = new ASTsetInstruction(JJTSETINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(INS_SET);
      jj_consume_token(IDENTIFIER);
      expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void setOrderInstruction() throws ParseException {
                              /*@bgen(jjtree) setOrderInstruction */
  ASTsetOrderInstruction jjtn000 = new ASTsetOrderInstruction(JJTSETORDERINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(INS_SETORDER);
      jj_consume_token(BYTEORDER);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void jumpInstruction() throws ParseException {
                          /*@bgen(jjtree) jumpInstruction */
  ASTjumpInstruction jjtn000 = new ASTjumpInstruction(JJTJUMPINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(INS_JUMP);
      expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }
